@@ -619,8 +619,8 @@ structure $G$ affording a \kbd{.cyc} method; e.g. \kbd{idealstar}$(,q)$
 for Dirichlet characters. A character $\chi$ is coded by
 $[c_1,\dots,c_k]$ such that $\chi(g_j) = e(n_j/d_j)$.
 \hfil\break
-\li{$\chi\cdot \psi$; $\chi^{-1}$; $\chi\cdot \psi^{-1}$}
-   {charmul{\rm, }charconj{\rm, }chardiv}
+\li{$\chi\cdot \psi$; $\chi^{-1}$; $\chi\cdot \psi^{-1}$; $\chi^k$}
+   {charmul{\rm, }charconj{\rm, }chardiv,{\rm, }charpow}
 \li{order of $\chi$}{charorder$(\var{cyc}, \chi)$}
 \li{kernel of $\chi$}{charker$(\var{cyc},\chi)$}
 \li{$\chi(x)$, $G$ a GP group structure}{chareval$(G, \chi, x, \{z\})$}
