@@ -2445,6 +2445,8 @@ GEN     charmul(GEN x, GEN a, GEN b);
 GEN     charmul0(GEN x, GEN a, GEN b);
 GEN     charorder(GEN cyc, GEN x);
 GEN     charorder0(GEN x, GEN chi);
+GEN     charpow(GEN cyc, GEN a, GEN N);
+GEN     charpow0(GEN x, GEN a, GEN N);
 GEN     char_denormalize(GEN cyc, GEN D, GEN chic);
 GEN     char_normalize(GEN chi, GEN ncyc);
 GEN     char_simplify(GEN D, GEN C);
@@ -2461,6 +2463,7 @@ GEN     zncharinduce(GEN G, GEN chi, GEN N);
 long    zncharisodd(GEN G, GEN chi);
 GEN     zncharmul(GEN G, GEN a, GEN b);
 GEN     zncharorder(GEN G,  GEN chi);
+GEN     zncharpow(GEN G, GEN a, GEN n);
 GEN     znchartokronecker(GEN G, GEN chi, long flag);
 int     znconrey_check(GEN cyc, GEN chi);
 GEN     znconrey_normalized(GEN G, GEN chi);
