@@ -9,6 +9,15 @@ m=znconreyexp(G,a);
 charker(G,a)
 charker(G,A)
 charker(G,m)
+charpow(G,a,0)
+charpow(G,A,0)
+charpow(G,m,0)
+charpow(G,a,-2)
+charpow(G,A,-2)
+charpow(G,m,-2)
+charpow(G,a,3)
+charpow(G,A,3)
+charpow(G,m,3)
 charconj(G,a)
 charconj(G,A)
 charconj(G,m)
